# Alse_ejercicios

./: hamming.cpp  hamming.txt  parking_sistem.cpp
Segundo_Corte/Entrega_1/: CMakeLists.txt  Corte2:_Entrega_de_ejercicios_1  armstrong_numbers.cpp  parking_sistem.txt
Segundo_Corte/Entrega_3/: Authentication_Manager.txt  CMakeLists.txt
Tercer_Corte/Entregables_1/: ATM.cpp  ATM.txt  Auction_System.cpp  Auction_System.txt  CMakeLists.txt  Clock.cpp  Clock.txt  Meetup.cpp  Meetup.txt  Underground_System.cpp  Underground_System.txt
Tercer_Corte/Proyecto_Final/: CMakeList.txt  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
Tercer_Corte/Proyecto_Final/html/: _calculo_8cpp.html  _calculo_8h.html  _calculo_8h.js  _calculo_8h_source.html  _database_manager_8cpp.html  _database_manager_8h.html  _database_manager_8h_source.html  _login_8cpp.html  _login_8h.html  _login_8h.js  _login_8h_source.html  _principal_8cpp.html  _principal_8h.html  _principal_8h.js  _principal_8h_source.html  _usuario_8cpp.html  _usuario_8h.html  _usuario_8h_source.html  annotated.html  annotated_dup.js  class_calculo-members.html  class_calculo.html  class_calculo.js  class_database_manager-members.html  class_database_manager.html  class_database_manager.js  class_login-members.html  class_login.html  class_principal-members.html  class_principal.html  class_principal.js  class_usuario-members.html  class_usuario.html  class_usuario.js  classes.html  dir_007eebefe0b89af87f9923bb05392ff7.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_4fef79e7177ba769987a8da36c892c5f.js  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+38 more)
Tercer_Corte/Proyecto_Final/include/: Calculo.h  DatabaseManager.h  Login.h  Principal.h  Principal.hy  Usuario.h
Tercer_Corte/Proyecto_Final/latex/: _calculo_8cpp.tex  _calculo_8h.tex  _calculo_8h_source.tex  _database_manager_8cpp.tex  _login_8cpp.tex  (+34 more)
(+128 files in other folders)
