cmake_minimum_required(VERSION 3.10)
project(Alse_ejercicios)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(armstrong_numbers armstrong_numbers.cpp)
add_executable(hamming hamming.cpp)
add_executable(parking_system parking_system.cpp)
add_executable(space_age space_age.cpp)
