cmake_minimum_required(VERSION 3.10)
project(Alse_ejercicios/Entrega_3)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(Authentication_Manager Authentication_Manager.cpp)
add_executable(Scores_Tracker Scores_Tracker.cpp)
add_executable(Crypto_Square Crypto_Square.cpp)
add_executable(Bank_Account Bank_Account.cpp)
