cmake_minimum_required(VERSION 3.10)
project(Alse_ejercicios/Entrega_3)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(ATM ATM.cpp)   
add_executable(Clock Clock.cpp)   
add_executable(Meetup Meetup.cpp)   
add_executable(Auction_System Auction_System.cpp)   
add_executable(Underground_System Underground_System.cpp)
